<resources>
    <string name="app_name">database_project</string>
    <string name="갯수">갯수</string>
    <string name="보관일자">보관일자</string>
    <string name="보관위치">보관위치</string>
    <string name="유통기한">유통기한</string>
    <string name="상품명">상품명</string>
    <string name="제조일자">제조일자</string>
    <string name="구매일자">구매일자</string>
    <string name="개봉일자">개봉일자</string>
    <string name="입력방식1">바코드</string>
    <string name="입력방식2">수기입력</string>
    <string name="입력1">상품입력</string>
    <string name="유통확인">유통기한 확인</string>
    <string name="저장">저장</string>
    <string name="저">저장 상품 확인</string>
    <string name="select1">상품명 :</string>
    <string name="select2">제조일자 :</string>
    <string name="select3">"구매일자 : "</string>
    <string name="select4">개봉일자 :</string>
    <string name="select5">보관위치 :</string>
    <string name="select6">갯수 :</string>
    <string name="상품조회">상품 조회</string>
    <string name="상품삭제">상품 삭제</string>
    <string name="로그인">로그인</string>
    <string name="회원가입">회원가입</string>
    <string name="아이디">아이디</string>
    <string name="패스워드">패스워드</string>
    <string name="Limitime">Limitime</string>
    <string name="상품별특징">상품별 특징</string>
    <string name="상할">상할때 특징</string>
    <string name="주의사항">주의사항</string>
</resources>
