<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:textColor="#000000"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:textColor="#000000" android:text="@string/select1" android:id="@+id/name1"/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:textColor="#000000"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:textColor="#000000" android:text="@string/상할" android:id="@+id/fff"/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:textColor="#000000"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:textColor="#000000" android:text="@string/주의사항" android:id="@+id/care"/>

</LinearLayout>

</LinearLayout>