<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"

            android:layout_height="200dp"
            android:src="@drawable/logo"

            />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="false"

            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_expire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:background="@color/colorPrimary"
                    android:duplicateParentState="true"

                    android:onClick="onClick"
                    android:padding="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/유통확인"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toTopOf="@+id/button_barcode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:onClick="onClick"
                    android:text="@string/상품삭제"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_barcode" />

                <Button
                    android:id="@+id/button_check"
                    android:layout_width="148dp"
                    android:layout_height="39dp"

                    android:layout_margin="10dp"

                    android:background="@color/colorPrimary"
                    android:onClick="onClick"
                    android:text="@string/저"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_delete"
                    app:layout_constraintHorizontal_bias="0.277"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_hand" />


            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center">


                <Button
                    android:id="@+id/button_hand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorPrimary"
                    android:onClick="onClick"
                    android:text="@string/입력방식2"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toTopOf="@+id/button_check"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/button_barcode"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:onClick="onClick"
                    android:padding="0dp"
                    android:text="@string/입력방식1"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toTopOf="@+id/button_expire"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="127dp"
                    android:layout_height="37dp"

                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="62dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="35dp"
                    android:background="@color/colorPrimary"
                    android:onClick="onClick"
                    android:paddingTop="10dp"
                    android:text="@string/유통기한"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toStartOf="@+id/button_expire"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:text="@string/입력1"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/button_hand"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </TableRow>

        </TableLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>